discus section end

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -138,10 +138,13 @@
 
 			<div class="content__text">
 				<p class="text">
-					Фан-токены Binance — это utility-токены спортивных клубов, команд, знаменитостей или брендов с большой
+					<a class="link_color_yellow" href="#"> Фан-токены Binance </a> — это utility-токены спортивных клубов, команд,
+					знаменитостей или брендов с
+					большой
 					аудиторией.
 					Владельцы фан-токенов могут наслаждаться уникальными привилегиями, включая предварительные продажи билетов на
-					мероприятия и коллекционирование специальных невзаимозаменяемых токенов (NFT). В некоторых случаях они также
+					мероприятия и коллекционирование специальных <a class="link_color_yellow" href="#"> невзаимозаменяемых токенов
+						(NFT) </a> . В некоторых случаях они также
 					могут
 					влиять на решения, связанные с клубом: выбор новой формы, музыки для выхода и многого другого. Платформа
 					фан-токенов
@@ -167,7 +170,7 @@
 					«Лиге
 					чемпионов УЕФА». Чтобы стать ближе к своим болельщикам, в 2021 году клуб заключил партнерство с платформой
 					Binance и
-					выпустил фан-токены ФК «Порту» (PORTO).
+					выпустил <a class="link_color_yellow" href="#"> фан-токены ФК «Порту» (PORTO) </a>.
 				</p>
 
 				<p class="text">
@@ -323,9 +326,70 @@
 			</div>
 		</div>
 
-<div class="discus">
+		<section class="discus">
+			<div class="discus__wrap">
+				<h3 class="title discus_title">
+					Обсуждение
+				</h3>
 
-</div>
+
+				<button class="button_form_none " type="button">
+					<svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M8.5 6.61141L15.1114 0L17 1.88859L10.3886 8.5L17 15.1114L15.1114 17L8.5 10.3886L1.88859 17L0 15.1114L6.61141 8.5L0 1.88859L1.88859 0L8.5 6.61141Z"
+							fill="white" />
+					</svg>
+				</button>
+			</div>
+
+			<div class="discus__input">
+				<label class="discus__label" for="name"></label>
+				<input class="input discus__inform" name="text" type="text" placeholder="Что ты думаешь?" id="name" required>
+			</div>
+
+
+			<button class="button_form_none  discus__nav-button">
+				Актуальные
+			</button>
+			<div class="line discus__line">
+			</div>
+
+			<ul class="menu discus__menu">
+				<li class="discus__item">
+
+					<blockquote class="quote discus__quote">
+
+
+						<cite class="cite discus__cite">
+							<img class="discus__img" src="assets/images/discus/foto.png" alt="фотография пользователя">
+							<span>MQ Wireless</span>
+						</cite>
+
+						<span class="discus__text">Когда прогноз альфа. Это было 3 года на бета-версии. Мошенничество заключается
+							в цене
+							оракула, которая никогда не совпадает с Binance или какой-либо биржей. Сколько прибыли вы получили от
+							🔥. Разве предсказание не
+							считается азартной игрой? Почему правила разрешают это в США, Великобритании и Австралии.
+						</span>
+
+
+					</blockquote>
+					<button class="button_form_none content__button-svg discus__button-svg">
+						<svg class="content__svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+							xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M14.6 8L21 8C21.5304 8 22.0391 8.21071 22.4142 8.58579C22.7893 8.96086 23 9.46957 23 10L23 12.104C23.0003 12.3654 22.9493 12.6242 22.85 12.866L19.754 20.38C19.6787 20.5632 19.5507 20.72 19.3862 20.8304C19.2217 20.9408 19.0281 20.9998 18.83 21L2 21C1.73478 21 1.48043 20.8946 1.29289 20.7071C1.10535 20.5196 0.999998 20.2652 0.999998 20L0.999999 10C0.999999 9.73478 1.10536 9.48043 1.29289 9.29289C1.48043 9.10536 1.73478 9 2 9L5.482 9C5.6421 9.00004 5.79986 8.96164 5.94203 8.88803C6.0842 8.81442 6.20662 8.70776 6.299 8.577L11.752 0.850999C11.8209 0.753312 11.9226 0.68356 12.0385 0.654389C12.1545 0.625218 12.277 0.638562 12.384 0.691999L14.198 1.6C14.7085 1.85516 15.1163 2.27731 15.3537 2.79632C15.5911 3.31532 15.6438 3.89992 15.503 4.453L14.6 8ZM7 10.588L7 19L18.16 19L21 12.104L21 10L14.6 10C14.2954 9.99996 13.9948 9.93034 13.7212 9.79646C13.4476 9.66258 13.2082 9.46797 13.0213 9.22749C12.8343 8.987 12.7048 8.70699 12.6425 8.40882C12.5803 8.11065 12.5869 7.8022 12.662 7.507L13.565 3.959C13.5933 3.84833 13.5828 3.73131 13.5353 3.62743C13.4878 3.52354 13.4062 3.43905 13.304 3.388L12.643 3.058L7.933 9.73C7.683 10.084 7.363 10.374 7 10.588ZM5 11L3 11L3 19L5 19L5 11Z"
+								fill="#8F93A4" />
+						</svg>
+						<span>
+							10
+						</span>
+					</button>
+				</li>
+			</ul>
+
+
+		</section>
 	</section>
 
 
