content styles fix

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -40,7 +40,7 @@
 					</a>
 				</div>
 
-				<div class="card__content card__content_name_portu">
+				<div class="card__content card__img_name_portu">
 
 				</div>
 
@@ -129,7 +129,7 @@
 				</p>
 			</div>
 
-			<div class="card__content card__content_name_adt">
+			<div class="card__content card__img_name_adt">
 			</div>
 
 			<h2>
@@ -181,7 +181,7 @@
 				</p>
 			</div>
 
-			<div class="card__content card__content_name_porto-info">
+			<div class="card__content card__img_name_porto-info">
 			</div>
 
 			<div class="content__text">
@@ -220,7 +220,7 @@
 				</p>
 			</div>
 
-			<div class="card__content card__content_name_video">
+			<div class="card__content card__img_name_video">
 			</div>
 
 			<div class="content__buy">
@@ -255,10 +255,10 @@
 				</div>
 
 				<div class="content__card-wrap">
-					<div class="card__content card__content_name_bay">
+					<div class="card__content card__img_name_bay">
 					</div>
 
-					<div class="card__content card__content_name_sell">
+					<div class="card__content card__img_name_sell">
 					</div>
 				</div>
 			</div>
@@ -387,8 +387,6 @@
 					</button>
 				</li>
 			</ul>
-
-
 		</section>
 	</section>
 
@@ -646,5 +644,4 @@
 		<script src="assets/scripts/index.js"></script>
 		<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
-
 </html>
