education section start

--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -11,12 +11,10 @@
 </head>
 
 <body class="page__body">
-	<section class="education">
+	<section class="education container">
 
 		<div class="card education__card">
-
-			<div class="card__content education__content">
-
+			<div class="card__content education__img">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -34,11 +32,13 @@
 				</h2>
 
 				<p>
-					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда ...
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
 				</p>
 
-				<div class="content__button-wrap">
-					<a class="button content__button" href="#">
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
 						Торговля
 					</a>
 
@@ -47,7 +47,275 @@
 					</a>
 
 					<a class="button content__button" href="#">
-						+3
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card education__card">
+			<div class="card__content education__img">
+			</div>
+			<div class="education__wrap">
+				<div class="card__top">
+					<p class="text card__text">
+						4 минуты
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2>
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+
+				<p>
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
+				</p>
+
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
+						Торговля
+					</a>
+
+					<a class="button content__button" href="#">
+						Основы
+					</a>
+
+					<a class="button content__button" href="#">
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card education__card">
+			<div class="card__content education__img">
+			</div>
+			<div class="education__wrap">
+				<div class="card__top">
+					<p class="text card__text">
+						4 минуты
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2>
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+
+				<p>
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
+				</p>
+
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
+						Торговля
+					</a>
+
+					<a class="button content__button" href="#">
+						Основы
+					</a>
+
+					<a class="button content__button" href="#">
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card education__card">
+			<div class="card__content education__img">
+			</div>
+			<div class="education__wrap">
+				<div class="card__top">
+					<p class="text card__text">
+						4 минуты
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2>
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+
+				<p>
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
+				</p>
+
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
+						Торговля
+					</a>
+
+					<a class="button content__button" href="#">
+						Основы
+					</a>
+
+					<a class="button content__button" href="#">
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card education__card">
+			<div class="card__content education__img">
+			</div>
+			<div class="education__wrap">
+				<div class="card__top">
+					<p class="text card__text">
+						4 минуты
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2>
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+
+				<p>
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
+				</p>
+
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
+						Торговля
+					</a>
+
+					<a class="button content__button" href="#">
+						Основы
+					</a>
+
+					<a class="button content__button" href="#">
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card education__card">
+			<div class="card__content education__img">
+			</div>
+			<div class="education__wrap">
+				<div class="card__top">
+					<p class="text card__text">
+						4 минуты
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2>
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+
+				<p>
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
+				</p>
+
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
+						Торговля
+					</a>
+
+					<a class="button content__button" href="#">
+						Основы
+					</a>
+
+					<a class="button content__button" href="#">
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="card education__card">
+			<div class="card__content education__img">
+			</div>
+			<div class="education__wrap">
+				<div class="card__top">
+					<p class="text card__text">
+						4 минуты
+					</p>
+
+					<a class="link link_level_advanced" href="">
+						Продвинутый
+					</a>
+				</div>
+
+				<h2>
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+
+				<p>
+					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
+					на форекс,
+					крипто и других рынках.
+				</p>
+
+				<div class="content__button-wrap education__button-wrap">
+					<a class="button content__button education__button" href="#">
+						Торговля
+					</a>
+
+					<a class="button content__button" href="#">
+						Основы
+					</a>
+
+					<a class="button content__button" href="#">
+						Технический анализ
+					</a>
+
+					<a class="button content__button" href="#">
+						Экономика
 					</a>
 				</div>
 			</div>
