education mobile styles end

--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -14,7 +14,7 @@
 	<section class="education container">
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_btc">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -27,11 +27,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
@@ -58,7 +58,7 @@
 		</div>
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_mean">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -71,11 +71,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
@@ -102,7 +102,7 @@
 		</div>
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_ape">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -115,11 +115,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
@@ -146,7 +146,7 @@
 		</div>
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_game">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -159,11 +159,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
@@ -190,7 +190,7 @@
 		</div>
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_women">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -203,11 +203,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
@@ -234,7 +234,7 @@
 		</div>
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_woo">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -247,11 +247,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
@@ -278,7 +278,7 @@
 		</div>
 
 		<div class="card education__card">
-			<div class="card__content education__img">
+			<div class="card__content education__img education__img_inform_coti">
 			</div>
 			<div class="education__wrap">
 				<div class="card__top">
@@ -291,11 +291,11 @@
 					</a>
 				</div>
 
-				<h2>
+				<h2 class="text education__title">
 					Полное руководство по торговле криптовалютой для начинающих
 				</h2>
 
-				<p>
+				<p class="text">
 					Свечи Hammer - это паттерны, которые могут помочь вам определить потенциальные развороты тренда при торговле
 					на форекс,
 					крипто и других рынках.
